--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,7 +27,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@800&family=Lato:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>DoDaily</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
